--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,5 @@ NC_TEST_SERVER_PASSWORD=test
 android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx2000m
-
+#org.gradle.jvmargs=-Dfile.encoding=UTF-8
 #android.debug.obsoleteApi=true
