--- a/build.gradle
+++ b/build.gradle
@@ -439,6 +439,9 @@ dependencies {
 //    androidJacocoAnt "org.jacoco:org.jacoco.agent:${jacocoVersion}"
 
     implementation "com.github.stateless4j:stateless4j:2.6.0"
+
+    // Huawei
+    implementation 'com.huawei.hms:push:5.1.1.301'
 }
 
 configurations.all {
